# pynbfx

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: format.yaml
pynbfx/: combinators.py  dictonary.py  parser.py  records.py  result.py  utils.py
tests/: test_combined_records_parsers.py  test_large_data.py  test_single_record_parsers.py
